--- a/updateLocation.ipynb
+++ b/updateLocation.ipynb
@@ -39,7 +39,16 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lng:104.01552350787733\n",
+      "lat:30.580487532991878\n"
+     ]
+    }
+   ],
    "source": [
     "def parse2lnglat(lng,lat):\n",
     "    url_base = \"http://api.map.baidu.com/geoconv/v1/?coords=\"\n",
@@ -56,9 +65,9 @@
     "        lat = temp['result'][0]['y']\n",
     "    return lat,lng\n",
     "\n",
-    "# lat,lng = parse2lnglat(104.006705,30.577101)\n",
-    "# print(lng)\n",
-    "# print(lat)"
+    "lat,lng = parse2lnglat(104.006705,30.577101)\n",
+    "print('lng:{}'.format(lng))\n",
+    "print('lat:{}'.format(lat))"
    ]
   },
   {
@@ -36662,13 +36671,7 @@
       "97475 30.80603333594188 104.1772622983824\n",
       "97476 30.77424112002003 104.07794617901054\n",
       "97477 30.784251085833883 104.14807727157793\n",
-      "97478 30.769979700317865 104.07787877585531\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "97478 30.769979700317865 104.07787877585531\n",
       "97479 30.822240124781136 104.18870200772095\n",
       "97480 30.748132347904807 104.18073236268933\n",
       "97481 30.83773340022401 104.18354199771501\n",
@@ -40294,26 +40297,25 @@
     "lat_lng_data = {\"id\":idint,\"community_name\":community_names,\"lat\":lats,\"lng\":lngs}\n",
     "\n",
     "for idi,lat,lng,community_name in zip(list(pre_location[\"id\"]),list(pre_location[\"lat\"]),list(pre_location[\"lng\"]),list(pre_location[\"community_name\"])):\n",
-    "    if idi > 62000:\n",
-    "        lat = str(lat)\n",
-    "        lng = str(lng)\n",
-    "        community_name = str(community_name)\n",
-    "        lat,lng = parse2lnglat(lng,lat)\n",
-    "        if lat != 0 or lng !=0:\n",
-    "            idint.append(idi)\n",
-    "            community_names.append(community_name)\n",
-    "            lats.append(lat)\n",
-    "            lngs.append(lng)\n",
-    "            print(idi,lat,lng)\n",
-    "        if idi>0 and idi%2000==0:\n",
-    "            df_latlng = pd.DataFrame(lat_lng_data)\n",
-    "            df_latlng.to_csv(\"./cleandata/updateposition/latlng\"+str(idi)+\".csv\",encoding='gbk')\n",
-    "            idint = []\n",
-    "            community_names = []\n",
-    "            lats = []\n",
-    "            lngs = []\n",
-    "            address = ''\n",
-    "            lat_lng_data = {\"id\":idint,\"community_name\":community_names,\"lat\":lats,\"lng\":lngs}"
+    "    lat = str(lat)\n",
+    "    lng = str(lng)\n",
+    "    community_name = str(community_name)\n",
+    "    lat,lng = parse2lnglat(lng,lat)\n",
+    "    if lat != 0 or lng !=0:\n",
+    "        idint.append(idi)\n",
+    "        community_names.append(community_name)\n",
+    "        lats.append(lat)\n",
+    "        lngs.append(lng)\n",
+    "        print(idi,lat,lng)\n",
+    "    if idi>0 and idi%2000==0:\n",
+    "        df_latlng = pd.DataFrame(lat_lng_data)\n",
+    "        df_latlng.to_csv(\"./cleandata/updateposition/latlng\"+str(idi)+\".csv\",encoding='gbk')\n",
+    "        idint = []\n",
+    "        community_names = []\n",
+    "        lats = []\n",
+    "        lngs = []\n",
+    "        address = ''\n",
+    "        lat_lng_data = {\"id\":idint,\"community_name\":community_names,\"lat\":lats,\"lng\":lngs}"
    ]
   },
   {
